--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,9 +27,15 @@ code {
 }
 
 .container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+img {
+  max-width: 100vh;
+  padding: 1vh;
+  text-align: center;
+  margin: 0 auto;
 }
